# elfie-in-white-shorts

./: .env.example  .gitignore  README.md  debug.txt  pyproject.toml  requirements.txt  train_debug.txt
.github/workflows/: EMail.txt  _____whiteshorts.yml  process_metrics.yml  publish_predictions_TO_supabase.yml  search-patterns-1.yml  whiteshorts.yml  whiteshorts_bf.yml  whiteshorts_build_app.yml
data/: NHL_YTD.csv  white_shorts.duckdb
data/dashboards/: consistency_2025-11-06_last_14d.csv  consistency_2025-11-07_last_14d.csv  consistency_2025-11-08_last_14d.csv  consistency_2025-11-09_last_14d.csv  consistency_2025-11-10_last_14d.csv  consistency_2025-11-11_last_14d.csv  consistency_2025-11-12_last_14d.csv  consistency_2025-11-13_last_14d.csv  consistency_2025-11-14_last_14d.csv  (+75 more)
exports/: README.md
models/: lgbm_poisson_points_db338f89_0.3.0.joblib  lgbm_poisson_shots_on_goal_0.3.0.joblib  lgbm_poisson_team_goals_431147d6_0.3.0.joblib  lgbm_tweedie_assists_db338f89_0.3.0.joblib  lgbm_tweedie_goals_db338f89_0.3.0.joblib  lgbm_tweedie_points_db338f89_0.3.0.joblib  lgbm_tweedie_shots_on_goal_db338f89_0.3.0.joblib  rf_qrf_assists_db338f89_0.3.0.joblib  rf_qrf_goals_db338f89_0.3.0.joblib  rf_qrf_points_db338f89_0.3.0.joblib  rf_qrf_shots_on_goal_db338f89_0.3.0.joblib
whiteshorts_app/: README.md  README_flutter.md
whiteshorts_app_broadcast/: README.md  publish_from_csv.py  pyproject.toml
whiteshorts_app_broadcast/src/whiteshorts_broadcast/: __init__.py  config.py  processors.py
whiteshorts_app_broadcast/src/whiteshorts_broadcast/publishers/: supabase_pub.py
(+233 files in other folders)
